--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   logger: ^2.5.0
+  cloud_firestore: ^5.6.6
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
