--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   logger: ^2.5.0
   cloud_firestore: ^5.6.6
   shared_preferences: ^2.0.15
+  intl: ^0.18.0
+  firebase_messaging: ^15.2.5
 
 dev_dependencies:
   flutter_test:
